--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -13,6 +13,7 @@
          margin: 24px;
          width: 80px;
          height: 80px;
+         cursor: pointer;
 
          img {
             position: absolute;
