--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -84,8 +84,11 @@ form {
 
    margin-bottom: 49px;
 
-   .user__data {
-      display: table-caption;
+   .user__name {
+      width: 360px;
+      @media screen and (max-width: 768px) {
+         width: 100%;
+      }
 
       input {
          height: 48px;
@@ -282,4 +285,16 @@ form {
          color: #fff;
       }
    }
+}
+.user__data__item__info__name span{
+   text-transform: capitalize;
+}
+
+.user__data__item__photo img{
+   width: 100px;
+   height: 100px;
+   border-radius: 12px;
+}
+.user__data__item span{
+   font-weight: 900;
 }
